package at.bbrz.cvportal.backend.entities;

public enum Role {
    ADMIN,
    TEILNEHMER
}
