package at.bbrz.cvportal.backend.entities;

public enum SkillLevel {
    ANFAENGER,
    GRUNDKENNTNISSE,
    FORTGESCHRITTEN,
    EXPERTE
}
